fitness-goal-tracker-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hyjazloudin-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: hloudin.server.com
    http:
      paths:
      # when we get traffic on the endpoint hloudin.server.com/server we route it to our server-service service
      - path: /server
        backend:
          serviceName: server-service
          servicePort: 80
  - host: hloudin.client.com
    http:
      paths:
      # when we get traffic on the endpoint hloudin.client.com we route it to our client-server service
      - backend:
          serviceName: client-service
          servicePort: 80
